opam-version: "2.0"
name: "pmp6"
version: "~dev"
synopsis: "Site web de PMP6"
maintainer: "Thibault Suzanne <thi.suzanne@gmail.com>"
authors: "Thibault Suzanne <thi.suzanne@gmail.com>"
homepage: "http://pmp6.fr"
dev-repo: "git+https://github.com/PMP6/pmp6-site.git"
bug-reports: "https://github.com/PMP6/pmp6-site/issues"
depends: [
  "camlzip"
  "caqti"
  "caqti-driver-sqlite3"
  "caqti-lwt"
  "core_kernel"
  "dbm"
  "eliom"
  "fmt"
  "js_of_ocaml"
  "lwt"
  "lwt_ppx"
  "ppx_jane"
  "tyxml"
  "tyxml-ppx"
  "uucp"
  "uunf"
  "uuseg"
]
build: make
install: [make "install"]
url {
  src: "git+file:///home/thibault/pmp6#master"
}
